# kbd-trainer

./: CMakeLists.txt  package.nix  shell.nix
include/: game.h
src/: game.c  main.c  render.c
